Actions
Bug #15885
openfmtopo produces inconsistent output for unsigned arrays
Start date:
Due date:
% Done:
0%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
External Bug:
Description
The fmtopo
command is inconsistent in how it prints the values for uint32 or uint64 properties, and for arrays of these values.
For example, in the output below the single values are printed in hex with a leading 0x, but the arrays are printed in decimal.
# /usr/lib/fm/fmd/fmtopo -V | grep uint ... link-maximum-speed uint64 0x9502f900 link-current-speed uint64 0x9502f900 link-supported-speeds uint64[] [ 2500000000 ] ...
The array entries should be printed in the same form as the single values.
Actions