15885 fmtopo produces inconsistent output for unsigned arrays Reviewed by: Robert Mustacchi <rm+illumos@fingolfin.org> Reviewed by: Igor Kozhukhov <igor@dilos.org> Approved by: Dan McDonald <danmcd@mnx.io>